src/test/resources/fixtures/parser/solidity_official_tests/shouldSucceed/placeholderInFunctionContext.sol
contract c {
  function fun() returns (uint r) {
    var _ = 8;
    return _ + 1;
  }
}