src/test/resources/fixtures/parser/solidity_official_tests/shouldFail/variable_definition_in_function_return.sol
contract test {
  function fun() returns(var d) {
    return 1;
  }
}